--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,4 +18,8 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "werkzeug>=3.1.4",
     "reportlab>=4.0.0",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "httpx>=0.28.1",
+    "mongomock>=4.3.0",
 ]
