--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@dhiwise/component-tagger": "^1.0.14",
     "@heroicons/react": "^2.2.0",
+    "@stream-io/video-react-sdk": "^1.31.7",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "next": "15.1.11",
