--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "werkzeug>=3.1.4",
     "reportlab>=4.0.0",
+    "redis>=5.0.0",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "httpx>=0.28.1",
