--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "langchain-community>=0.3.0",
     "langchain-google-genai>=2.0.0",
     "pymongo>=4.15.5",
+    "redis>=5.0.0",
     "python-dotenv>=1.2.1",
     "werkzeug>=3.1.4",
     "reportlab>=4.0.0",
