--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,8 @@
     "@stream-io/video-react-sdk": "^1.31.8",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "next": "15.1.11",
     "react": "19.0.3",
     "react-dom": "19.0.3",
