--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,7 +26,12 @@
         "./src/*"
       ]
     },
-    "target": "ES2017"
+    "target": "ES2017",
+    "types": [
+      "node",
+      "jest",
+      "@testing-library/jest-dom"
+    ]
   },
   "include": [
     "next-env.d.ts",
@@ -35,6 +40,9 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "cypress",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
