--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "dev": "next dev -p 4028",
     "build": "next build",
-    "start": "next dev -p 4028",
+    "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:e2e": "cypress run",
